add_executable(record_index_test record_index_test/record_index_test.cpp)
target_link_libraries(record_index_test storage lru_replacer record index system transaction gtest_main)

add_executable(record_index_deep_test record_index_test/record_index_deep_test.cpp)
target_link_libraries(record_index_deep_test storage lru_replacer record index system transaction gtest_main)

add_executable(executor_scan_test executor_test/executor_scan_test.cpp)
target_link_libraries(executor_scan_test storage lru_replacer record index system transaction execution gtest_main)

add_executable(executor_full_test executor_test/executor_full_test.cpp)
target_link_libraries(executor_full_test storage lru_replacer record index system transaction execution gtest_main)

add_executable(integration_test integration_test/integration_test.cpp)
target_link_libraries(integration_test storage lru_replacer record index system transaction execution gtest_main)

add_executable(sm_manager_test system_test/sm_manager_test.cpp)
target_link_libraries(sm_manager_test storage lru_replacer record index system transaction execution gtest_main)

add_executable(bpm_bench buffer_pool_benchmark.cpp)
target_link_libraries(bpm_bench storage lru_replacer pthread)
